# haskell

./: .gitignore  Main.hs  README.md  SimpleJSON.hs  mypretty.cabal
01/: hanoi.hs  types.hs  validate.hs  var.hs
02/: LogAnalysis.hs
03/: Golf.hs
04/: h4.hs
05/: Expr.hs  compile.hs  eval.hs  evalStr.hs  withVars.hs
06/: Fibonacci.hs
07/: JoinList.hs  JoinListBufEditor.hs  JoinListBuffer.hs  Scrabble.hs  Sized.hs
08/: Party.hs
